# masters_thesis

./: README.md
label_localization/: CMakeLists.txt  package.xml
label_localization/scripts/: batch_analytics_pipeline.py  batch_generate_smoothed_map.py  compare_ground_truth.py
label_training_detection/: CMakeLists.txt  package.xml
label_training_detection/scripts/: debayer.py  debayer_and_rotate.py  imrotate.py  plot_detection_time.py  plot_detection_time_scale_factor.py  plot_detection_time_window_size.py  visualize_classifier.py
thesis/multi_robot_CFS/Batch_SAM/: batch_SAM.m  cosine_cache.mat  csm_scan_matcher.m  data_chopper.m  dataset_robot2.mat  dataset_robot4.mat  fast_csm_scan_matcher.m  fiducial_processor.m  mex_csm_caller.cpp  mex_csm_caller.mexa64  odometry_difference.m  parameters.json  parameters_batchSAM.json  scan_matcher.m  sine_cache.mat  velocity_motion_model.m
thesis/multi_robot_CFS/Batch_SAM/data/: dataset_robot1.mat  dataset_robot2.mat  dataset_robot3.mat  dataset_robot4.mat
thesis/multi_robot_CFS/csm/: CMakeLists.txt  package.xml
thesis/multi_robot_CFS/csm/include/csm/: algos.h  csm.h  csm_all.h  json_journal.h  laser_data.h  laser_data_cairo.h  laser_data_drawing.h  laser_data_inline.h  laser_data_json.h  math_utils_gsl.h
thesis/multi_robot_CFS/csm/include/csm/gpm/: gpm.h
thesis/multi_robot_CFS/csm/include/csm/hsm/: hsm_interface.h
thesis/multi_robot_CFS/csm/include/csm/icp/: icp.h
thesis/multi_robot_CFS/csm/include/csm/mbicp/: MbICP.h  MbICP2.h  calcul.h  percolate.h
thesis/multi_robot_CFS/csm/src/csm/: json_journal.c  laser_data.c  laser_data_bbox.c  laser_data_cairo.c  laser_data_carmen.c  laser_data_drawing.c  laser_data_fisher.c  laser_data_json.c  laser_data_load.c  logging.c  math_utils.c  math_utils_gsl.c  math_utils_test.c  orientation.c  sm_options.c  test_math_utils_sanity.c  utils.c
thesis/multi_robot_CFS/csm/src/csm/gpm/: gpm.c
thesis/multi_robot_CFS/csm/src/csm/hsm/: hsm.c  hsm_interface.c  hsm_test00.c
thesis/multi_robot_CFS/csm/src/csm/icp/: icp.c  icp_corr_dumb.c  icp_corr_tricks.c  icp_covariance.c  icp_debug.c  icp_loop.c  icp_outliers.c
thesis/multi_robot_CFS/csm/src/csm/mbicp/: MbICP.c  calcul.c  mbicp_driver.cc  mbicp_interface.c  percolate.c  sp_matrix.c
thesis/multi_robot_CFS/csm_processor/: CMakeLists.txt  package.xml
thesis/multi_robot_CFS/csm_processor/include/csm_processor/: csm_processor.h  test.h
thesis/multi_robot_CFS/csm_processor/scripts/: test.py
thesis/multi_robot_CFS/csm_processor/src/: compile_mex.m  csm_caller.cpp  csm_processor.cpp  mex_csm_caller.cpp  mex_csm_caller.mexa64  mex_include.mat  pose_reconstruction_from_scan.m  test.cpp
thesis/multi_robot_CFS/csm_ros/: CMakeLists.txt  package.xml
thesis/multi_robot_CFS/csm_ros/include/csm_ros/: csm_ros.h
thesis/multi_robot_CFS/csm_ros/src/csm_ros/: csm_ros.cpp
thesis/multi_robot_CFS/csm_ros/test/: test_csm_ros.cpp
thesis/multi_robot_CFS/dataset_parser/: cosine_cache.mat  csm_scan_matcher.m  data_chopper.m  fast_csm_scan_matcher.m  fiducial_diagnostics.m  fiducial_parser.m  fiducial_plotter.m  gtsam_test_arena.m  ideal_model.m  laser_parser.m  laser_parser.m~  lmap_parser.m  occupancy_grid_from_pose.m  odom_parser.m  odom_vs_velocity_model.m  odometry_difference.m  plot_raw_odom.m  plot_raw_scan.m  pose_reconstruction_from_scan.m  posterior_velocity_correction.m  raw_data_parser.m  raw_data_parser.m~  scan_matcher.m  scan_reconstruction_from_pose.m  sine_cache.mat  test_ideal_model.m
thesis/multi_robot_CFS/dataset_parser/scan_matches/: rot_local_robot3.mat  trans_local_robot3.mat
thesis/multi_robot_CFS/iSAM/: encounter_1.mat  encounter_2.mat  encounter_3.mat  encounter_4.mat  encounter_construction.m  encounter_extract.m  fiducial_processor.m  iSAM.m  iSAM2.m  last_day_construction.m  last_min.m  mex_csm_caller.cpp  multi_robot_construction.m  odometry_difference.m  parameters_iSAM.json  parameters_iSAM_robot1.json  parameters_iSAM_robot2.json  parameters_iSAM_robot3.json  parameters_iSAM_robot4.json~  robot3_BayesTree.dot  scan_matcher.m  scan_reconstruction_from_pose.m  untitled4.m
thesis/multi_robot_CFS/iSAM/data/: dataset_robot3.mat  encounter_data.mat  factor_indices_1.mat  factor_indices_2.mat  factor_indices_3.mat  factor_indices_4.mat  ordering_time.mat  smoothed_results_1.mat  smoothed_results_2.mat  smoothed_results_3.mat  smoothed_results_4.mat
thesis/multi_robot_CFS/loop_closures/: cosine_cache.mat  data_chopper.m  kD_robot3.mat  kDtree.m  lmap_diagnostics.m  lmap_diagnostics.m~
thesis/multi_robot_CFS/loop_closures/non_trivial_lc/: data_chopper.m  inter_robot_interaction.m  inter_robot_interaction.m~  robot2_smoothed_results.mat  robot3_smoothed_results.mat
thesis/multi_robot_CFS/modular_iSAM/: diary  extract_data.m  fast_csm_scan_matcher.m  fiducial_processor.m  gen_encounter_factors.m  gen_fiducial_factors.m  gen_lclosure_factors.m  gen_lmap_factors.m  gen_odom_factors.m  gen_scan_match_factors.m  graph.gv  graph_fuser.m  initial_guess_module.m  load_params.m  mex_csm_caller.mexa64  multi_sam.m  optimize.m  parameters_iSAM_robot1.json  parameters_iSAM_robot1.json~  parameters_iSAM_robot2.json  parameters_iSAM_robot3.json  parameters_iSAM_robot4.json  parameters_iSAM_robot4.json~  scan_match_pattern_selector.m  setup_covariances.m  setup_globals.m  top_level.m
thesis/multi_robot_CFS/plots/LaTeX/: dead_reckoning.eps  factorization_time_comparison.eps  nnz_comparison.eps  ordering_comparison_1.eps  (+3 more)
thesis/multi_robot_CFS/rev_engg/: gen_graph.m
thesis/multi_robot_CFS/sparse_matrix_experiment/: colamd_chop_verification.m  colamd_graph_combining.m  colamd_stats.m  colamd_stats.m~  graph_merge_refactor.m
thesis/report/diagrams/: Diagram1.dia  factor_graph.dia  factor_graph.tex
thesis/report/ms_presentation/: WPI_Multi.pptx  WPI_White.pptx
thesis/report/ms_thesis_source/: Bibliography.bib  Bibliography.bib.bak  Thesis.aux  Thesis.bbl  Thesis.blg  Thesis.brf  Thesis.cls  Thesis.dvi  Thesis.lof  Thesis.out  Thesis.tex  Thesis.tex.bak  Thesis.toc  front_page_singned.eps  thesis_frontpage.tex
(+46 files in other folders)
