<?xml version="1.0"?>
<package>
  <name>csm_processor</name>
  <version>0.0.0</version>
  <description>The csm_processor package</description>

  <maintainer email="nrkumar93@gmail.com">Ramkumar Natarajan</maintainer>
  <license>GPLv3</license>

  <author email="nrkumar93@gmail.com">Ramkumar Natarajan</author> 

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>csm</build_depend>
  <build_depend>csm_ros</build_depend>
      
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>csm</run_depend>
  <run_depend>csm_ros</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
