<?xml version="1.0"?>
<package>
  <name>csm_ros</name>
  <version>0.0.0</version>
  <description>The csm_ros package provides conversion functions/classes
               for easy transition between ROS LaserScan messages and native
               CSM data structures.
  </description>

  <maintainer email="stephen.w@bnrobotics.com">Stephen Williams</maintainer>
  <author email="stephen.w@bnrobotics.com">Stephen Williams</author>
  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/csm_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>csm</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>libpcl-all</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>csm</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <test_depend>gtest</test_depend>

</package>